--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon backend/server.js",
+    "start": "node backend/server.js",
     "client": "npm start --prefix ./frontend",
     "dev": "concurrently \"npm run start\" \"npm run client\""
   },
