--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.4",
     "stripe": "^12.16.0",
+    "uuid": "^9.0.0",
     "validator": "^13.9.0"
   }
 }
